--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,7 @@ html
 
     - if content_for?(:meta)
       = yield :meta
-
+    link href="#{image_path("favicon.ico")}" rel="shortcut icon"
     meta charset="utf-8" 
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     meta content="width=device-width, initial-scale=1" name="viewport"
