--- a/app/assets/stylesheets/advertisement.css.scss
+++ b/app/assets/stylesheets/advertisement.css.scss
@@ -48,3 +48,9 @@
   margin: 0em;
   font-size: 1.8em;
 }
+.adv-item{
+  margin-top: 2px;
+  background-color: ivory;
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
