--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -40,7 +40,7 @@ ol.breadcrumb
       .form-group
         label.control-label.col-sm-4 
         .input-group.col-sm-4
-          = f.link_to_add 'Добавить нормер', :phones, :data => { :target => "#reg-phones" }
+          = f.link_to_add 'Добавить номер', :phones, :data => { :target => "#reg-phones" }
           span.help-block.small например: +7(863) 2-12-85-06
       .form-group
         label.control-label.col-sm-4 почта
