order location view

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -28,7 +28,10 @@
   font-color: #F0FFFF;
 }
 
-.top-buffer { margin-bottom:20px; }
+.top-buffer { margin-bottom:5px; }
+
+
+.btn.SelectLocation {padding: 2px 6px;}
 
 
 
