--- a/app/views/advertisements/_search_results.html.slim
+++ b/app/views/advertisements/_search_results.html.slim
@@ -41,7 +41,7 @@ ul.list-unstyled
         - else
           i.fa.fa-cube
         '
-        = t "activerecord.attributes.user.role.#{adv.user_role}"
+        = t "activerecord.attributes.user.roles.#{adv.user_role}"
         = " " + adv.name
         br
         a.btn.btn-default.btn-xs.ShowAdvPhone data-id="#{adv.id}"
