--- a/app/views/advertisements/show.html.slim
+++ b/app/views/advertisements/show.html.slim
@@ -91,12 +91,12 @@ ol.breadcrumb
       - if @adv.user_role == 'owner'
         i.fa.fa-check
         '
-        = t('activerecord.attributes.user.role.owner')
+        = t('activerecord.attributes.user.roles.owner')
         '
       -else
         i.fa.fa-cube
         '
-        =t('activerecord.attributes.user.role.agent')
+        =t('activerecord.attributes.user.roles.agent')
         '
       span
         a href="#" = @adv.sales_agent
