--- a/app/views/advertisements/_popover_select_location.html.slim
+++ b/app/views/advertisements/_popover_select_location.html.slim
@@ -1,15 +1,19 @@
-- if @locations.count < 25
-  .row
-    .col-md-12
-      .btn-group data-toggle="buttons"
-        - @locations.each do |location|
-          .location-button name="#{location[:location_type]}" has_children="#{location[:has_children]}" lid="#{location[:id]}"  class="button btn btn-default SelectLocation"
-            = location[:title]
+- if @locations.count < 20 && @locations['street'].blank?
+  - @locations.each_value do |value|
+    .row.top-buffer
+      .col-md-12
+        .btn-group data-toggle="buttons"
+          - value.sort_by{ |l| l[:title] }.each do |location|
+            .location-button name="#{location[:location_type]}" has_children="#{location[:has_children]}" lid="#{location[:id]}" class="button btn btn-default SelectLocation"
+              = location[:title]
 - else
-  .row
+  .row.pop-show-location
     .col-md-12
       form.form-horizontal role="form"
         .form-group
           label.col-sm-4.control-label for="autocomplete" Поиск по названию
           .col-sm-8
             input.form-control.autocomplete-search-location parent_id="#{@location.id}" multiple=true
+span.pull-left.resultforaut
+  span.small для уточнений:
+  a.btn.btn-link.btn-sm href="mailto:mesto@multilisting.su" mesto@multilisting.su
