Autocomplete finally working fine. Cache removed - it is terrifying. Mainjs code not so dry as it should be.

--- a/app/views/advertisements/_popover_select_location.html.slim
+++ b/app/views/advertisements/_popover_select_location.html.slim
@@ -1,4 +1,4 @@
-- if @locations.count < 20 && (@locations['street'].blank? || @locations['address'].blank? )
+- if @locations.count < 20 && @locations['street'].blank?
   - @locations.each_value do |value|
     .row.top-buffer
       .col-md-12
