--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -17,7 +17,7 @@
 }
 
 .adv_item{
-  margin-top: 2px; background-color: ghostwhite; padding-top: 10px;
+  margin-top: 2px; background-color: ghostwhite; padding-top: 10px; padding-bottom: 10px;
 }
 
 .adv_item.adv_item_even {
