--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,53 +1,27 @@
 hr
-  .container
-    .row
-      .col-sm-12
-        .col-sm-3
-          ul.list-unstyled
-            li
-              a href="#"  О проекте
-            li
-              a href="#"  Прейскурант
-        .col-sm-3
-          ul.list-unstyled
-            li
-              a href="#"  Рейтинг
-            li
-              a href="#"  Правила
-        .col-sm-3
-          ul.list-unstyled
-            li
-              i.fa.fa-phone +7(863)221-46-93
-            li
-              a href="#" 
-                i.fa.fa-envelope preved@domowoi.com
-            li
-              | В соцсетях:
-              a href="#" 
-                i.fa.fa-vk.fa-lg
-              a href="#" 
-                i.fa.fa-facebook.fa-lg
-              a href="#" 
-                i.fa.fa-twitter.fa-lg
-        .col-sm-3
-          ul.list-unstyled
-            li
-              img.ntrjpqkzhfuchztmqesa.xfiklgiveqtmelnqwvlz.lnplvnpubvxdgftipsmu.tbnddonqnitetwsyteoj.wpzjskckjpxxtnijywbg.cpeezzwkbtlknorkkoaz.tbpzqnnejeufidbmkawq.bkxvsigeepqacthqzdgh.fzriptnponfjrbfuqfzq.hoknzeimboemcwzzptvf src="http://counter.yadro.ru/hit?t14.1;rhttp%3A//www.liveinternet.ru/rating/ru/realty/;s1366*768*24;uhttp%3A//www.cian.ru/;0.23339581051479796" 
-            li
-              a.small href="#" 
-                i.fa.fa-sitemap
-                | карта сайта
-    .row
-      .col-sm-12
-        .col-sm-12
-          | &copy; 2007–2014 Электронная база недвижимости. Приложения для
-          '
-          a href="#"
-            i.fa.fa-apple.fa-lg
-          '
-          | и
-          '
-          a href="#" 
-            i.fa.fa-android.fa-lg
+  .row
+    .col-sm-4
+      i.fa.fa-line-chart
+      = "2007–#{DateTime.now.year} Электронная база недвижимости."
+    .col-sm-4
+        i.fa.fa-fax
+        '
+        | +7 (863) 200-61-54
+    .col-sm-2
+      a href="info@multilisting.su"
+        i.fa.fa-envelope-o
+        '
+        | info@multilisting.su
+    .col-sm-2
+      javascript:
+        document.write("<a href='//www.liveinternet.ru/click' " +
+        "target=_blank><img src='//counter.yadro.ru/hit?t17.1;r" +
+        escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
+        ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
+        screen.colorDepth:screen.pixelDepth))+";u" + escape(document.URL) +
+        ";" + Math.random() +
+        "' alt='' title='LiveInternet: показано число просмотров за 24" +
+        " часа, посетителей за 24 часа и за сегодня' " +
+        "border='0' width='88' height='31'><\/a>");
 hr
 
