--- a/app/views/shared/_pagination.html.slim
+++ b/app/views/shared/_pagination.html.slim
@@ -1,17 +1,18 @@
 - if pages > 1
-  ul.pagination.pull-left
-    - if current_page > 1
-      li
-        a href=url_path.call(url_params.merge!({:page => current_page - 1}))
-          | &laquo;
-    - (1..pages).each do |page|
-      li class="#{'disabled' if page == current_page}"
-        a href=url_path.call(url_params.merge!({:page => page}))
-          = page
-    -if current_page < pages
-      li
-        a href=url_path.call(url_params.merge!({:page => current_page + 1}))
-          | &raquo;
+  .row
+    ul.pagination.pull-left
+      - if current_page > 1
+        li
+          a href=url_path.call(url_params.merge!({:page => current_page - 1}))
+            | &laquo;
+      - (1..pages).each do |page|
+        li class="#{'disabled' if page == current_page}"
+          a href=url_path.call(url_params.merge!({:page => page}))
+            = page
+      -if current_page < pages
+        li
+          a href=url_path.call(url_params.merge!({:page => current_page + 1}))
+            | &raquo;
 
 
 
