--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -8,7 +8,7 @@ hr
         '
         | +7 (863) 200-61-54
     .col-sm-2
-      a href="info@multilisting.su"
+      a href="mailto:info@multilisting.su"
         i.fa.fa-envelope-o
         '
         | info@multilisting.su
