Search result cards html updated.

--- a/app/assets/stylesheets/advertisement.css.scss
+++ b/app/assets/stylesheets/advertisement.css.scss
@@ -54,3 +54,9 @@
   padding-top: 7px;
   padding-bottom: 7px;
 }
+.adv-card{
+  margin-top: 2px;
+  background-color: ivory;
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
