font-awesome added as an gem. Working fine.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,9 @@
  */
 @import "bootstrap";
 @import "bootstrap/theme";
-@import "vendor/font-awesome";
+//@import "vendor/font-awesome";
+//@import "font-awesome-sprockets";
+@import 'font-awesome';
 @import "vendor/bootstrap-notify";
 @import "vendor/bootstrapValidator.min";
 
