--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -17,7 +17,8 @@
           li.nav.navbar-nav
             =link_to new_user_registration_path
               .navbar-link
-                i.fa.fa-plug.fa-flip-vertical
+                i.fa.fa-plug
+                '
                 | Зарегистрироваться
         li.nav.navbar-nav
           - if @current_user
