--- a/app/views/advertisements/search_inputs/_interval.html.slim
+++ b/app/views/advertisements/search_inputs/_interval.html.slim
@@ -1,4 +1,4 @@
-.form-group
+.form-group.additional_search_params_action
   label
     = t("advertisement.attributes.#{attr[:name]}_from").mb_chars.downcase
   '
