--- a/app/views/advertisements/search_inputs/_boolean.html.slim
+++ b/app/views/advertisements/search_inputs/_boolean.html.slim
@@ -1,4 +1,4 @@
-.form-group
+.form-group.additional_search_params_action
   .btn-group data-toggle="buttons"
     label.btn.btn-default.btn-xs class="#{('active' if attr[:value]=='1')}"
       i.fa.fa-lg class="#{attr[:class_name]}"
