search-results - striping returned. Labels and icons in footer are divided. Popover first version.

--- a/app/assets/stylesheets/advertisement.css.scss
+++ b/app/assets/stylesheets/advertisement.css.scss
@@ -54,10 +54,11 @@
   padding-top: 7px;
   padding-bottom: 7px;
 }
-.adv-card{
-  margin-top: 2px;
-  background-color: ivory;
-  padding-top: 7px;
-  padding-bottom: 7px;
+.col-sm-6.popover-long-padding {
+  padding-right: 25px;
 }
+label.col-sm-6.popover-short-padding {
+  float: left;
+}
+
 
