--- a/app/views/advertisements/_popover_select_location.html.slim
+++ b/app/views/advertisements/_popover_select_location.html.slim
@@ -11,9 +11,6 @@
     .col-md-12
       form.form-horizontal role="form"
         .form-group
-          label.col-sm-4.control-label for="autocomplete" Поиск по названию
-          .col-sm-8
+          label.col-sm-6.popover-short-padding.control-label for="autocomplete" Поиск по названию
+          .col-sm-6.popover-long-padding
             input.form-control.autocomplete-search-location parent_id="#{@location.id}" multiple=true
-span.pull-left.resultforaut
-  span.small для уточнений:
-  a.btn.btn-link.btn-sm href="mailto:mesto@multilisting.su" mesto@multilisting.su
