--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -4,14 +4,19 @@ hr
       ul.list-unstyled
         li
           i.fa.fa-line-chart
+          '
           = "2007–#{DateTime.now.year} Электронная база недвижимости."
     .col-sm-3
       ul.list-unstyled
         li
-          i.fa.fa-fax +7 (863) 200-61-54
+          i.fa.fa-fax
+          '
+          |+7 (863) 200-61-54
         li
           a href="mailto:info@multilisting.su"
-            i.fa.fa-envelope-o info@multilisting.su
+            i.fa.fa-envelope-o
+            '
+            |info@multilisting.su
     .col-sm-2
       ul.list-unstyled
         li
